refactor: pom.xml to add SpringBoot support, removed redundant dependencies, closes #597